# no-exceptions

./: .gitignore  README.md  pyproject.toml
.github/workflows/: qa.yaml
src/no_exceptions/: __init__.py  _all.py
tests/: test_try_expecting.py
