[tool.poetry]
name = "no-exceptions"
description = "Errors as values for Python."
version = "0.1.0-dev2"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
authors = ["Vasiliy Spassky <spassky99@gmail.com>"]
keywords = ["errors", "exceptions", "error handling", "exception handling"]

[tool.poetry.urls]
Homepage = "https://github.com/v-spassky/no-exceptions"
Issues = "https://github.com/v-spassky/no-exceptions/issues"
Repository = "https://github.com/v-spassky/no-exceptions.git"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
ruff = "^0.6.9"
pytest = "^8.3.3"
build = "^1.2.2.post1"
poethepoet = "^0.29.0"
twine = "^5.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.poe.tasks]
lint = "ruff check ."
typecheck = "mypy ."
test = "pytest --cov=src --cov-report term-missing ."
build = "python3 -m build"
check-all = ["lint", "typecheck", "test"]
show-coverage = "coverage html"
